GNOME Bugzilla – Bug 671635
ephy-history-window: Open pages in new tab on middle click
Last modified: 2012-03-13 08:18:07 UTC
This is a regression from previous history window, so let's bring it back.
Created attachment 209236 [details] [review] ephy-history-view: add row-middle-clicked signal
Created attachment 209237 [details] [review] ephy-history-view: open pages in a new tab on middle click This was present in the old EphyNodeView history. Bring it back.
Review of attachment 209236 [details] [review]: ::: lib/widgets/ephy-history-view.c @@ +81,3 @@ g_signal_emit_by_name (treeview, "popup_menu", &retval); + } else if (event->button == 2) { + g_signal_emit (G_OBJECT (treeview), You don't need the cast here, I believe. And no braces for one line clauses.
Review of attachment 209237 [details] [review]: Looks good. Same comments about G_OBJECT and g_signal_connect :)
Created attachment 209327 [details] [review] ephy-history-view: add row-middle-clicked signal
Created attachment 209328 [details] [review] ephy-history-view: open pages in a new tab on middle click This was present in the old EphyNodeView history. Bring it back.
The first patch is changed, to take into account the concerns presented in bug 537731.
Review of attachment 209327 [details] [review]: OK, makes sense. Just a few nitpicks, but no need to upload the patch again. ::: lib/widgets/ephy-history-view.c @@ +28,3 @@ #include <gtk/gtk.h> +static void ephy_history_view_finalize (GObject *object); If you put finalize above class_init you don't really need to do this. Nitpick 1/2. @@ +30,3 @@ +static void ephy_history_view_finalize (GObject *object); + +#define GET_PRIVATE(object) (G_TYPE_INSTANCE_GET_PRIVATE ((object), EPHY_TYPE_HISTORY_VIEW, EphyHistoryViewPrivate)) I know I'm an ass but let's use the full name of the macro, as usual, for consistency. Nitpick 2/2. @@ +168,3 @@ gtk_tree_selection_set_mode (selection, GTK_SELECTION_MULTIPLE); + + self->priv->pressed_path = NULL; And this is not really needed, memory is zeroed already. Nitpick 3/2 (wait...)
Review of attachment 209328 [details] [review]: OK.
Attachment 209327 [details] pushed as 12c2338 - ephy-history-view: add row-middle-clicked signal Attachment 209328 [details] pushed as f4ed0fb - ephy-history-view: open pages in a new tab on middle click