ephy-history-view: add row-middle-clicked signal

https://bugzilla.gnome.org/show_bug.cgi?id=671635